--- a/dist.ini
+++ b/dist.ini
@@ -8,8 +8,6 @@ copyright_year   = 2013
 
 [VersionFromModule]
 
-[PodWeaver]
-
 [AutoPrereqs]
 
 [Prereqs / TestRequires]
@@ -17,3 +15,4 @@ Test::More = 0
 Test::Pod = 0
 Test::Pod::Coverage = 1.08
 File::Temp = 0
+lib::abs = 0
