--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300029, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,4 +23,7 @@ requires:
   perl: 5.008
   strict: 0
   warnings: 0
-version: 0.004
+resources:
+  homepage: https://github.com/skington/warnings_everywhere
+  repository: https://github.com/skington/warnings_everywhere.git
+version: 0.005
