Import of SKINGTON/warnings-everywhere-0.010.tar.gz from CPAN.
gitpan-cpan-distribution: warnings-everywhere
gitpan-cpan-version:      0.010
gitpan-cpan-path:         SKINGTON/warnings-everywhere-0.010.tar.gz
gitpan-cpan-author:       SKINGTON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,28 +3,28 @@ abstract: 'a way of ensuring consistent global warning settings'
 author:
   - 'Sam Kington <skington@cpan.org>'
 build_requires:
-  English: '0'
-  File::Spec: '0'
-  File::Temp: '0'
-  Test::More: '0'
-  Test::Pod: '0'
-  Test::Pod::Coverage: '1.08'
-  lib::abs: '0'
+  English: 0
+  File::Spec: 0
+  File::Temp: 0
+  Test::More: 0
+  Test::Pod: 0
+  Test::Pod::Coverage: 1.08
+  lib::abs: 0
 configure_requires:
-  ExtUtils::MakeMaker: '0'
+  ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.143240'
+generated_by: 'Dist::Zilla version 5.029, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: '1.4'
+  version: 1.4
 name: warnings-everywhere
 requires:
-  Carp: '0'
-  perl: '5.008'
-  strict: '0'
-  warnings: '0'
+  Carp: 0
+  perl: 5.008
+  strict: 0
+  warnings: 0
 resources:
   homepage: https://github.com/skington/warnings_everywhere
   repository: https://github.com/skington/warnings_everywhere.git
-version: '0.009'
+version: 0.010
